# advent

./: .gitignore  fetch.sh
2024/: build.zig  build.zig.zon  flake.nix
2024/src/: main.zig
2025/: .clang-format  .clangd  .editorconfig  CMakeLists.txt  README.md  README.txt  flake.nix
2025/src/: bench.hpp  defs.hpp  gen_lut.cpp  main.cpp
